# mao-android

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/vipycm/mao/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mao-ffmpeg.cpp  mao-ffmpeg.h  native-lib.cpp  yuv-decoder.c
app/src/main/cpp/media/: AudioDecoder.cpp  AudioDecoder.h  AudioDecoderJni.cpp  MediaLibraryJni.cpp
app/src/main/cpp/util/: JniDataType.cpp  JniDataType.h  log.h
app/src/main/java/com/tencent/mars/xlog/: Xlog.java
app/src/main/java/com/vipycm/commons/: FileUtils.java  MaoLog.java
app/src/main/java/com/vipycm/commons/recycler/: BaseRecyclerViewAdapter.java  BaseViewHolder.java
app/src/main/java/com/vipycm/commons/xlog/: Log.java  Xlog.java
app/src/main/java/com/vipycm/mao/: MaoApp.java
app/src/main/java/com/vipycm/mao/billing/: IabBroadcastReceiver.java  IabException.java  IabHelper.java  IabResult.java  Inventory.java  Purchase.java  Security.java  SkuDetails.java
app/src/main/java/com/vipycm/mao/camera/: CameraActivity.java  CameraFilter.java  CameraRenderer.java  CameraView.java  CaptureButton.java  OpenGlUtils.java  TextureRotationUtil.java  YuvDecoder.java
app/src/main/java/com/vipycm/mao/camera/encoder/: EglCore.java  EglSurfaceBase.java  MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerWrapper.java  MediaVideoEncoder.java  MovieWriter.java  WindowSurface.java
app/src/main/java/com/vipycm/mao/camera/filter/: CameraFilter.java  CameraFilterGroup.java  SourceOverBlendFilter.java  ToneCurveFilter.java  TwoInputFilter.java
app/src/main/java/com/vipycm/mao/cameragl/: CameraFilter.java  CameraRenderer.java
app/src/main/java/com/vipycm/mao/cameranew/: BaseCameraView.java  CameraActivity.java  CameraView.java  OpenGLUtils.java
app/src/main/java/com/vipycm/mao/cameranew/filter/: CameraFilter.java  CameraFilterGroup.java  CameraInputFilter.java  RedFilter.java  SunriseFilter.java
app/src/main/java/com/vipycm/mao/db/: BaseDao.java  DaoFactory.java  MaoDbHelper.java  UserDao.java
app/src/main/java/com/vipycm/mao/gl/: GLImageView.java  GLOESImageView.java  GLView.java
app/src/main/java/com/vipycm/mao/hack/: Hack.java  MaoHack.java
app/src/main/java/com/vipycm/mao/jni/: FFMpeg.java  HelloJni.java
app/src/main/java/com/vipycm/mao/media/: AudioDecoder.java  MediaLibrary.java  VideoDecoder.java  VideoPlayer.java
app/src/main/java/com/vipycm/mao/model/: User.java
app/src/main/java/com/vipycm/mao/ui/: AudioDecoderFragment.java  AutoFitTextureView.java  BillingFragment.java  Camera2Fragment.java  CameraFragment.java  CameraGLFragment.java  CaptureFragment.java  DbFragment.java  DsFragment.java  HelloJniFragment.java  IMaoHandler.java  MainActivity.java  MainFragment.java  MaoFragment.java  MyItemRecyclerViewAdapter.java  PaletteFragment.java  PmFragment.java  ScrollFragment.java  VideoDecodeFragment.java  VideoPlayFragment.java  WebActivity.java  WebViewEx.java
app/src/main/java/org/opencv/samples/facedetect/: FdActivity.java  MaoCameraView.java
app/src/main/jni/: Android.mk
app/src/main/res/layout/: activity_camera.xml  activity_camera_new.xml  activity_main.xml  face_detect_surface_view.xml  fragment_billing.xml  fragment_camera.xml  fragment_cameragl.xml  fragment_capture.xml  fragment_main.xml  fragment_palette.xml  fragment_sample.xml  fragment_scroll.xml  fragment_video_decode_gl.xml  fragment_video_play_gl.xml  item_func.xml  item_palette.xml  item_sample.xml  layout_tool_bar.xml
app/src/main/res/raw/: fs_sunrise.glsl
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/vipycm/mao/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sub-project/opencv/: build.gradle
